--- a/indexOg.html
+++ b/indexOg.html
@@ -50,17 +50,17 @@
             <div class="topics-container">
                 <h2>Topics</h2>
                 <!-- Local LLMS-->
-                <div class="topic">
+                <div class="topic-container">
                     <a tabindex="0" id="localLLMs" class="drop-topic">
                         <h3>Local LLMS</h3>
                     </a>
-                    <ul class="sub-topics-container topic-snips show">
-                        <li class="topic">
+                    <ul class="sub-topics-container show">
+                        <li>
                             <a tabindex="0" id="ollamaLocal" class="drop-topic" 
                             href="#">Ollama (local)
                                 <!-- <br><sub class="x-sm-txt">Learn Ollama in 15 Minutes - Run LLM Models Locally for FREE -->
                             </a>
-                            <ul class="sub-container topic-snips ">
+                            <ul class="sub-container">
                                 <li>Tech with Tim</li>
                                 <li>Example </li>
                                 <li>ANother Example</li>
