--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         </header>
         <main tabindex="0" id="mainContainer">
             <p class="r">I should make sub resources drop with sub-resources-container</p>
+            <p style="color: tomato; font-weight: 999;">This page is lacking correct closest element focus from currrent one, 
+                so letterFocus-txt-nums.js should be disgarded when corect one is found
+            </p>
             <p>
                 try to incorporate recursive drop-downs from codeCommandShortcuts page,
             </p>
@@ -48,8 +51,53 @@
                             href="#">Ollama (local)
                                 <!-- <br><sub class="x-sm-txt">Learn Ollama in 15 Minutes - Run LLM Models Locally for FREE -->
                             </a>
-                            <ul class="sub-container drop-snips ">
-                                <li>Tech with Tim</li>
+                            <ul class="sub-resources-container drop-snips ">
+                                <li>
+                                    <a tabindex="0" id="makeDataUseful" class="resource" target="_blank" href="
+                                        https://www.youtube.com/watch?app=desktop&v=tVwdpQyjtOc">
+                                    Tech with Tim
+                                    </a>
+                                </li>
+                                <li>
+                                    <a tabindex="0" id="makeDataUseful" class="resource" target="_blank" href="
+                                        https://www.youtube.com/watch?app=desktop&v=tVwdpQyjtOc">
+                                    EXample resource in sub-resources-container in topic
+                                    </a>
+                                </li>
+                                <li>
+                                    <a tabindex="0" id="makeDataUseful" class="resource" target="_blank" href="
+                                        https://www.youtube.com/watch?app=desktop&v=tVwdpQyjtOc">
+                                    another Example resource in sub-resources-container in topic
+                                    </a>
+                                </li>
+                                <li>Example </li>
+                                <li>ANother Example</li>
+                            </ul>
+                        </li>
+                        <li class="topic">
+                            <a tabindex="0" id="ollamaLocal" class="drop-down" 
+                            href="#">Ollama (local)
+                                <!-- <br><sub class="x-sm-txt">Learn Ollama in 15 Minutes - Run LLM Models Locally for FREE -->
+                            </a>
+                            <ul class="sub-resources-container drop-snips ">
+                                <li>
+                                    <a tabindex="0" id="makeDataUseful" class="resource" target="_blank" href="
+                                        https://www.youtube.com/watch?app=desktop&v=tVwdpQyjtOc">
+                                    Tech with Tim
+                                    </a>
+                                </li>
+                                <li>
+                                    <a tabindex="0" id="makeDataUseful" class="resource" target="_blank" href="
+                                        https://www.youtube.com/watch?app=desktop&v=tVwdpQyjtOc">
+                                    EXample resource in sub-resources-container in topic
+                                    </a>
+                                </li>
+                                <li>
+                                    <a tabindex="0" id="makeDataUseful" class="resource" target="_blank" href="
+                                        https://www.youtube.com/watch?app=desktop&v=tVwdpQyjtOc">
+                                    another Example resource in sub-resources-container in topic
+                                    </a>
+                                </li>
                                 <li>Example </li>
                                 <li>ANother Example</li>
                             </ul>
