--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css-index/dark-mode.css">
 
     <script type="module" src="js/index-script.js" defer ></script>        
-    <script src="js/letterFocus-home-back-link.js" defer></script>
+    <script src="js/letterFocus-fix.js" defer></script>
     <!-- <script src="js/letterFocus-txt-nums.js" defer></script> -->
      <!-- <script src="js/ui/drop-downs.js" defer></script> -->
     <script src="js/dark-mode.js" defer></script>
@@ -75,34 +75,7 @@
                                 
                             </div>
                         </li>
-                        <li class="topic">
-                            <a tabindex="0" id="ollamaLocal" class="drop-down" 
-                            href="#">Ollama (local)
-                                <!-- <br><sub class="x-sm-txt">Learn Ollama in 15 Minutes - Run LLM Models Locally for FREE -->
-                            </a>
-                            <ul class="sub-resources-container drop-snips ">
-                                <li>
-                                    <a tabindex="0" id="makeDataUseful" class="resource" target="_blank" href="
-                                        https://www.youtube.com/watch?app=desktop&v=tVwdpQyjtOc">
-                                    Tech with Tim
-                                    </a>
-                                </li>
-                                <li>
-                                    <a tabindex="0" id="makeDataUseful" class="resource" target="_blank" href="
-                                        https://www.youtube.com/watch?app=desktop&v=tVwdpQyjtOc">
-                                    EXample resource in sub-resources-container in topic
-                                    </a>
-                                </li>
-                                <li>
-                                    <a tabindex="0" id="makeDataUseful" class="resource" target="_blank" href="
-                                        https://www.youtube.com/watch?app=desktop&v=tVwdpQyjtOc">
-                                    another Example resource in sub-resources-container in topic
-                                    </a>
-                                </li>
-                                <li>Example </li>
-                                <li>ANother Example</li>
-                            </ul>
-                        </li>
+                        
                     </ul>
 
                 </div>
