--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css-index/index.css">
     <link rel="stylesheet" href="css-index/dark-mode.css">
 
+
     <script type="module" src="js/index-script.js" defer ></script>        
     <script src="js/letterFocus-fix.js" defer></script>
     <!-- <script src="js/letterFocus-txt-nums.js" defer></script> -->
@@ -84,15 +85,16 @@
                     <a tabindex="0" id="bots-ai" class="drop-down">
                         <h3>Bots - AI</h3>
                     </a>
-                    <ul class="sub-resources-container drop-snips show">
-                        <li>
-                            <a tabindex="0" id="leonVanZylBotsAi" class="resource"target="_blank" href="
+                    <div class="sub-resources-container drop-snips show">
+                        <a tabindex="0" id="leonVanZylBotsAi" class="resource" target="_blank" href="
                             https://www.youtube.com/watch?app=desktop&v=tVwdpQyjtOc">Leon van Zyl 
-                        (link for now)
+                            (link for now)
                             <img src="https://i.ytimg.com/vi/tVwdpQyjtOc/maxresdefault.jpg" alt="">
-                            </a>
-                        </li>
-                    </ul>
+                        </a>
+                        <a tabindex="0" id="theRecapAiAutomations" class="resource" target="_blank" 
+                            href="https://www.youtube.com/watch?v=mnV-lXxaFhk&t=1s">
+                        </a>
+                    </div>
                 </div>
             </div>
         </main>
@@ -102,12 +104,12 @@
                 <p>(<span class="lg-txt">⇧</span> + K)</p>
             </div>
         </nav>
-        <footer class="footer-header">
+        <footer class="mobile-footer-header">
             <div class="main-links">
+                <a tabindex="0" id="backlink" href="https://tylertomani.github.io/youtube-resources/">&larr;back (youtube- resources)</a>
                 <a tabindex="0" id="homelink" href="
                             https://tylertomani.github.io/homepage-2025/#
                             ">Home (main)</a>
-                <a tabindex="0" id="backlink" href="https://tylertomani.github.io/youtube-resources/">&larr;back (youtube- resources)</a>
             </div>
             <div id="aiLogo" class="page-logo">
                 <span>AI</span>
