--- a/topics/chatbots/01bo-Sar-howToBuildAi-2025/side-bar-link-html/01/01.html
+++ b/topics/chatbots/01bo-Sar-howToBuildAi-2025/side-bar-link-html/01/01.html
@@ -301,5 +301,6 @@ chmod +x safe-docker-cleanup.sh</pre>
             </div>
         </div>
         </div>
-    </body> 
-    </html> 
+    </div>
+</body> 
+</html> 
