--- a/topics/chatbots/01bo-Sar-howToBuildAi-2025/index-sidebar-temp.html
+++ b/topics/chatbots/01bo-Sar-howToBuildAi-2025/index-sidebar-temp.html
@@ -6,13 +6,9 @@
     <title>index-sidebar-temp</title>
     <link rel="stylesheet" href="css/main.css">
     <!-- <script src="js/keyboard-nav-temp.js" defer></script> -->
-    <script type="module" src="js/core/index.js" defer></script>
+    <script type="module" src="js/core/main-script.js" defer></script>
 
-
-
-
-    <!-- <script src="../../../js-index/ui/drop-downs.js" defer></script> -->
-    <!-- <link rel="stylesheet" href="../../../css-index/ui/drop-topic-sub-resources.css"> -->
+    <script type="module" src="../../../js-index/ui/drop-downs-index.js" defer></script>
 </head>
 <body>
     <sup>Let's do this,,, ONE MORE TIME</sup>
